to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.5.0.3 (development) -----

2005-03-10, cfalonso
Included field_map for close page
    - zentrack_2/includes/ZenFieldMap.class 1.9
    - zentrack_2/includes/templates/newTicketForm.php 1.41
    - zentrack_2/includes/templates/actions/close.php 1.4
    - zentrack_2/install/UPGRADE_mssqlserver.sql 1.32
    - zentrack_2/install/UPGRADE_mysql.sql 1.42
    - zentrack_2/install/UPGRADE_oracle.sql 1.38
    - zentrack_2/install/UPGRADE_postgres.sql 1.30
    - zentrack_2/install/seed_mssqlserver.sql 1.33
    - zentrack_2/install/seed_mysql.sql 1.46
    - zentrack_2/install/seed_oracle.sql 1.39
    - zentrack_2/install/seed_postgres.sql 1.35
    - zentrack_2/www/actions/close.php 1.12

2005-03-09, cfalonso
  Improved log for edits
    - zentrack_2/includes/zenTrack.class 1.176
  Enabled menu.template to display the current value as "selected" (TK 103)
    - zentrack_2/includes/zenTemplate.class 1.6
    - zentrack_2/includes/zenTemplate.class 1.5
    - zentrack_2/includes/templates/fields/menu.template 1.2
    - zentrack_2/includes/templates/fields/checkbox.template 1.2 (No real change in this one)

2005-03-08, Kato
  Added {field} property to data group javascript evals.  This allows a direct
  reference to the current field when used from behaviors.

2005-03-08, cfalonso
  No tickets were shown when Assigned to... was selected  -Fixed
    - zentrack_2/www/assignedTickets.php 1.12

2005-03-03, cfalonso
  Modified the format of the users' names in data groups 
  to lname,fname (to agree with the sort order)
    - zentrack_2/includes/zenTrack.class 1.175

2005-03-02, cfalonso
  Fixed mistake in session cache usage:
    - zentrack_2/includes/zenTrack.class 1.174
